examples/test/testpolicy7519.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7519
  namespace: namespace79
spec:
  podSelector:
    matchLabels:
      key44: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value36
          key28: value9
          key30: value22
      podSelector:
        matchLabels:
          key48: value0
